# LinuxSourceCode

./: i2cKernel3.10.0-1160.el7.tar
i2c-tools-3.1.0/i2c-tools-3.1.0/tools/: i2c-tools-3.1.0-13.el7.src.rpm  i2cdetect  i2cdetect.c  i2cdump  i2cget  i2cset
i2c-tools-4.3/i2c-tools-4.3/debian/: changelog  control  libi2c-dev.install  libi2c0.install  libi2c0.symbols  not-installed  rules  watch
i2c-tools-4.3/i2c-tools-4.3/debian/patches/: 01-decode-dimms-no-eeprom.diff
watchdog-5.16/watchdog-5.16/: .gitignore  COPYING  IAFA-PACKAGE  TODO  configure.ac  watchdog.8  watchdog.conf  watchdog.conf.5  watchdog.lsm
watchdog-5.16/watchdog-5.16/debian/: changelog  config  control  init  postinst  rules
watchdog-5.16/watchdog-5.16/debian/po/: pt.po
watchdog-5.16/watchdog-5.16/include/: extern.h  gettime.h  read-conf.h  xmalloc.h
watchdog-5.16/watchdog-5.16/src/: Makefile.am  configfile.c  daemon-pid.c  file_stat.c  gettime.c  heartbeat.c  keep_alive.c  killall5.c  logmessage.c  memory.c  net.c  read-conf.c  reopenstd.c  run-as-child.c  send-email.c  shutdown.c  test_binary.c  watchdog.c  wd_keepalive.c  xmalloc.c
